# Android-Terminal-Emulator

./: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
libtermexec/: .gitignore  build.gradle
libtermexec/src/main/java/jackpal/androidterm/: TermExec.java
libtermexec/src/main/jni/: CMakeLists.txt  process.cpp
term/: .gitignore  build.gradle
term/src/main/jni/: CMakeLists.txt  common.h
